--- a/src/Componentes/Card Lista/Cardlista.css
+++ b/src/Componentes/Card Lista/Cardlista.css
@@ -55,9 +55,9 @@
   }
 
   #btn-ver-lista {
-    background-color: "white";
+    background-color: white;
     color: var(--vermelho);
-    border: "1px solid";
+    border: 1px solid var(--vermelho);
     border-color: var(--vermelho);
   }
   
